force-app/main/default/objects/Representative__c/Representative__c.object-meta.xml
<CustomObject>
    <label>Representative</label>
    <nameField>
        <label>Representative</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Representatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>