force-app/main/default/objects/Representative__c/fields/Day_Planner_Visit_Today__c.field-meta.xml
<CustomField>
    <fullName>Day_Planner_Visit_Today__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Planner Visit Today</label>
    <referenceTo>Day_Planner__c</referenceTo>
    <relationshipLabel>Representatives</relationshipLabel>
    <relationshipName>Representatives</relationshipName>
    <type>Lookup</type>
</CustomField>