force-app/main/default/objects/Representative__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leads</label>
    <referenceTo>Leads__c</referenceTo>
    <relationshipLabel>Representatives</relationshipLabel>
    <relationshipName>Representatives</relationshipName>
    <type>Lookup</type>
</CustomField>