force-app/main/default/objects/Representative__c/fields/Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Opportunities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunities</label>
    <referenceTo>Opportunities__c</referenceTo>
    <relationshipLabel>Representatives</relationshipLabel>
    <relationshipName>Representatives</relationshipName>
    <type>Lookup</type>
</CustomField>