force-app/main/default/objects/Representative__c/fields/Representative_Id__c.field-meta.xml
<CustomField>
    <fullName>Representative_Id__c</fullName>
    <label>Representative Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>