force-app/main/default/objects/Representative__c/fields/Representative_User__c.field-meta.xml
<CustomField>
    <fullName>Representative_User__c</fullName>
    <formula>$User.FirstName + &apos; &apos; +  $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Representative/User</label>
    <type>Text</type>
</CustomField>